Mejora del Estilo del Menu e implementación del CRUD de cabezas circulo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logoApoyos.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gestion de Aooyos</title>
+    <title>Gestion de Apoyos</title>
+    <!-- Ensure emoji rendering is consistent -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
